# asya-assistant

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Caddyfile  Makefile  OPENCODE.md  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  cli.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260502_01_initial_multi_user_foundation.py  20260502_02_access_request_display_name.py  20260502_03_user_settings_and_access_request_reason.py  20260502_04_memory_spaces_foundation.py  20260502_05_integration_connections_foundation.py  20260502_06_oauth_states_pkce.py  20260502_07_diary_observer_private_chat.py  20260502_07_telegram_voice_tables.py  20260502_08_signup_tokens.py  20260503_01_file_storage_providers.py  20260503_02_imap_provider.py  20260504_01_observer_state_snapshots.py  20260504_02_action_events_rollback.py  20260504_02_storage_abstraction_settings.py  20260504_04_document_templates.py  20260504_05_briefings.py  20260508_01_pending_actions.py  20260509_02_briefings.py  (+7 more)
backend/app/: bootstrap_db.py  main.py
backend/tests/: auth_helpers.py  conftest.py  test_access_request_notifier.py  test_access_requests.py  test_action_rollback_service.py  test_action_router_bitrix24.py  test_action_router_document_fill.py  test_action_router_github.py  test_action_router_rollback_metadata.py  test_action_router_storage_commands.py  test_action_router_v05.py  test_alembic_migration.py  test_auth.py  test_backup.py  test_bitrix24_api.py  test_bitrix24_service.py  test_bitrix_fallback_api.py  test_briefings.py  test_briefings_api.py  test_chat.py  test_chats_api.py  test_db_backend_config.py  test_db_models.py  test_document_fill_service.py  test_document_templates_api.py  test_document_templates_chat_flow.py  test_documents_api.py  test_docx_to_pdf_converter.py  test_email_transport.py  test_encrypted_secret_service.py  test_file_storage_integrations.py  test_file_storage_service.py  test_files.py  test_frontend_serving.py  test_github_api.py  test_github_service.py  test_health.py  test_imap_api.py  test_imap_service.py  test_integration_connections_service.py  (+26 more)
(+289 files in other folders)
