[project]
name = "asya-backend"
version = "0.1.0"
description = "Asya Local backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "aiogram>=3.7.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "SQLAlchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.0",
  "alembic>=1.13.3",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "PyMuPDF>=1.24.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
  "Pillow>=10.4.0",
  "cryptography>=43.0.0",
  "apscheduler>=3.10.0",
  "boto3>=1.35.0",
  "sentry-sdk[fastapi]>=2.18.0",
  "prometheus-client>=0.21.0",
  "prometheus-fastapi-instrumentator>=7.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "moto[server,s3]>=5.0.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
